# reactor

./: .clang-format  .clang-tidy  .editorconfig  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
includes/backend/: backend.hpp
includes/common/: common.hpp  defs.hpp
includes/config/: config.hpp  config_error.hpp
includes/simulation/: simulation.hpp  thermodynamics.hpp
includes/tui/: common.hpp  connect.hpp  tui.hpp
src/: main.cpp
src/backend/: CMakeLists.txt  main.cpp  realization.cpp
src/config/: CMakeLists.txt  config.cpp
src/tui/: CMakeLists.txt  main.cpp  tui.cpp
